--- a/src/css/modules/_about.post.css
+++ b/src/css/modules/_about.post.css
@@ -46,9 +46,5 @@
         &-content {
             margin-top: 0;
         }
-
-        + &__box {
-            margin-top: 1.5rem;
-        }
     }
 }
